@@ -50,7 +50,6 @@
     "*://*.adweek.com/*",
     "*://*.aerztezeitung.de/*",
     "*://*.afr.com/*",
-    "*://*.aftonbladet.se/*",
     "*://*.aisnenouvelle.fr/*",
     "*://*.ajc.com/*",
     "*://*.al.com/*",
@@ -394,7 +393,6 @@
     "*://*.libelle.be/*",
     "*://*.libelle.nl/*",
     "*://*.liberation-champagne.fr/*",
-    "*://*.limburger.nl/*",
     "*://*.lindependant.fr/*",
     "*://*.linforme.com/*",
     "*://*.livelaw.in/*",
